@@ -1,3 +1,8 @@
+2009-06-15  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Evaluation\NRefactoryEvaluator.cs: Small
+	  optimization.
+
 2009-06-12  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Makefile.am:
